.tanzu/k8sgatewayroute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: surfersapi-route
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: surfersapi
    healthcheck.gslb.tanzu.vmware.com/path: /api/v1/healthz
    healthcheck.gslb.tanzu.vmware.com/port: "8080"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: http-surfersapi
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: surfersapi
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
